# faceswap

./: .gitignore  .replit  Procfile  README.md  app.py  app_updated.py  build-react.sh  build-simple.js  build.sh  categories.json  create_ai_templates.py  create_better_templates.py  create_enhanced_ai_templates.py  create_placeholder.py  create_placeholder_images.py  create_placeholder_saloon.py  create_simple_templates.py  create_template_samples.py  create_template_variations.py  create_templates.py  db.py  download_bridal_images.py  download_direct.py  download_direct_models.py  download_enhancement_models.py  download_from_found_repos.py  download_images_from_urls.py  download_models.py  download_pinterest_images.py  enhance_templates.py  enhancement.py  face_enhancer.py  full_page.html  generate_ai_bridal_images.py  generate_ai_templates.py  generate_haldi_image.py  generate_single_templates.py  generate_template_images.py  get_codeformer.py  hf_model_search_results.json  (+19 more)
app/: __init__.py
attached_assets/: Pasted--Dialog-Functionality-function-openDialog-const-dialog-document-getElementById-test-d-1747038649514.txt  Pasted--I-ve-finished-reverting-what-should-I-do-differently-this-time-can-you-use-this-page-in-react-1747303821066.txt  Pasted--div-class-mb-3-label-class-form-label-fw-bold-Event-T-1747046875678.txt  Pasted--div-id-multi-results-container-class-mt-2-div-class--1747041304359.txt  Pasted-React-app-initialized-7b5baa7ffa2611a5df26a41e72d6743a-jpg-1-G-1747304682983.txt  (+1 more)
data/: users.json
frontend/: package.json
templates/: ar_filters.html  base.html  (+33 more)
(+94 files in other folders)
