[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vowbride"
version = "0.1.0"
description = "An AI-powered wedding planning web application"
requires-python = ">=3.8"

[tool.poetry.dependencies]
flask = "*"
flask-sqlalchemy = "*"
flask-login = "*" 
numpy = "*"
opencv-python = "*"
insightface = "*"
onnxruntime = "*"
werkzeug = "*"
trafilatura = "*"
beautifulsoup4 = "*"
requests = "*"
sqlalchemy = "*"
huggingface-hub = "*"